--- a/index.html
+++ b/index.html
@@ -1,47 +1,47 @@
-            <!DOCTYPE html>
-            <html lang="en">
-            <head>
-                <meta charset="UTF-8">
-                <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-                <link rel="stylesheet" href="style.css">
-                <title>Clon de Pinterest</title>
-            </head>
-            <body>
-
-                <nav class="navbar navbar-expand-lg bg-light">
-                    <div class="container-fluid">
-                      <a class="navbar-brand" href="#">Logo</a>
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                      </button>
-                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                          <li class="nav-item">
-                            <button type="button" class="btn btn-dark  curvo ">  <strong>Inicio</strong>  </button>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="#">Hoy</a>
-                          </li>
-                          <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                             Inicio
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <li><a class="dropdown-item" href="#">Inicio</a></li>
-                              <li><a class="dropdown-item" href="#">home</a></li>
-                            </ul>
-                          </li>
-                          <li class="nav-item">
-                            
-                          </li>
-                        </ul>
-                        <form class="d-flex" role="search">
-                          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                          <button class="btn btn-outline-success" type="submit">Search</button>
-                        </form>
-                      </div>
-                    </div>
-                  </nav>
-                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-            </body>
-            </html>
+ <!DOCTYPE html>
+ <html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"   integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+ <title>Clon de Pinterest</title>
+</head>
+<body>
+   <nav class="contenedor " >
+     <div class="logo  general ">
+       <img   src="../Clon-pinterest/img/logo.jpg" alt="Logo Pinterest">
+     </div>
+     <div class="inicio  general">
+        <strong>Inicio</strong > 
+     </div>
+     <div class="hoy general ">
+      <a href="Home.html" class="hoy">
+       Hoy 
+      </a> 
+     </div>
+     <div class="buscador  ">
+      <div class="lupa">
+         <img src="../Clon-pinterest/img/lupa.png" alt="Lupa">
+      </div>
+     </div>
+     <div class="campana  general ">
+       <div class="campana">
+          <img src="../Clon-pinterest/img/campana.png" alt="Notificación">
+        </div>
+     </div>
+     <div class="mensaje  general ">
+       <img src="../Clon-pinterest/img/mensaje.png" alt="Mensajes">
+     </div>
+     <div class="imagen  general">
+       <img src="../Clon-pinterest/img/OIP.jpg"  class="imagen" alt="foto de perfil">
+     </div>
+     <div class="flecha general ">
+       <img src="../Clon-pinterest/img/flecha.png"  class="flecha" alt="flecha menu">
+     </div>
+   </nav>
+   <h1>Bienvenidos a Inicio</h1>
+              
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"   integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+</body>
+</html>
