--- a/Home.html
+++ b/Home.html
@@ -20,25 +20,31 @@
          <div class="hoy_2 general ">
        <strong>Hoy</strong > 
         </div>
-        <div class="buscador  ">
+        <div class="contenedor_buscador">
+            <div class="buscador  ">
+              
             <div class="lupa">
-             <img src="../Clon-pinterest/img/lupa.png" alt="Lupa">
+              <img src="../Clon-pinterest/img/lupa.png" alt="Lupa">
             </div>
-        </div>
-        <div class="campana  general ">
-         <div class="campana">
-         <img src="../Clon-pinterest/img/campana.png" alt="Notificación">
+            <div class="lupa_2">
+             <img  src="../Clon-pinterest/img/lupa_fbn.png" alt="Lupa">
             </div>
-        </div>
-        <div class="mensaje  general ">
+          </div>
+         </div>
+          <div class="campana  general ">
+            <div class="campana">
+               <img src="../Clon-pinterest/img/campana.png" alt="Notificación">
+             </div>
+          </div>
+          <div class="mensaje  general ">
             <img src="../Clon-pinterest/img/mensaje.png" alt="Mensajes">
-        </div>
-        <div class="imagen  general">
+          </div>
+          <div class="imagen  general">
             <img src="../Clon-pinterest/img/OIP.jpg"  class="imagen" alt="foto de perfil">
-        </div>
-        <div class="flecha general ">
+          </div>
+          <div class="flecha general ">
             <img src="../Clon-pinterest/img/flecha.png"  class="flecha" alt="flecha menu">
-        </div>
+          </div>
     </nav>
     <h1>Bienvenidos a Home</h1>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"   integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
