--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
        <div class="lupa_2">
         <img  src="../Clon-pinterest/img/lupa_fbn.png" alt="Lupa">
        </div>
+       <div class="letra" >Buscar</div>
      </div>
     </div>
      <div class="campana  general ">
