--- a/Home.html
+++ b/Home.html
@@ -29,6 +29,8 @@
             <div class="lupa_2">
              <img  src="../Clon-pinterest/img/lupa_fbn.png" alt="Lupa">
             </div>
+            <div class="letra" >Buscar</div>
+     </div>
           </div>
          </div>
           <div class="campana  general ">
