--- a/index.html
+++ b/index.html
@@ -44,7 +44,26 @@
       <img src="../Clon-pinterest/img/flecha.png"  class="flecha" alt="flecha menu">
     </div>
   </nav>
- <h1>Bienvenidos a Inicio</h1>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"   integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+  <div class="contenedor_imagenes">
+    <div class="diseño_imagen imagen_grande_6"></div>
+    <div class="diseño_imagen imagen_pequeña_1"></div>
+    <div class="diseño_imagen imagen_mediana_1"></div>
+    <div class="diseño_imagen  imagen_grande_1" ></div>
+    <div class="diseño_imagen  imagen_mediana_2"></div>
+    <div class="diseño_imagen imagen_pequeña_2"></div>
+    <div class="diseño_imagen imagen_grande_2"></div>
+    <div class="diseño_imagen imagen_mediana_3"></div>
+    <div class="diseño_imagen imagen_pequeña_3"></div>
+    <div class="diseño_imagen imagen_mediana_4"></div>
+    <div class="diseño_imagen imagen_pequeña_4"></div>
+    <div class="diseño_imagen imagen_mediana_5"></div>
+    <div class="diseño_imagen imagen_grande_3"></div>
+    <div class="diseño_imagen imagen_mediana_6"></div>
+    <div class="diseño_imagen imagen_pequeña_5"></div>
+    <div class="diseño_imagen imagen_grande_4"></div>
+    <div class="diseño_imagen imagen_pequeña_5"></div>
+    <div class="diseño_imagen imagen_grande_5"></div>
+</div>
+  
 </body>
 </html>
