--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="inicio  general">
        <strong>Inicio </strong > 
     </div>
-    <div class="hoy general  ">
+    <div class="hoy general ">
       <a href="hoy.html" class="hoy">  Hoy </a> 
     </div>
     <div class="contenedor_buscador">
@@ -26,7 +26,7 @@
         </div>
       
         <div class="lupa_2">
-          <img  src="../Clon-pinterest/img/lupa_fbn.png" alt="Lupa">
+          <svg class="gUZ ztu U9O kVc" height="20" width="20" viewBox="0 0 24 24" aria-hidden="true" aria-label="" role="img"><path d="M10 16c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6m13.12 2.88-4.26-4.26A9.842 9.842 0 0 0 20 10c0-5.52-4.48-10-10-10S0 4.48 0 10s4.48 10 10 10c1.67 0 3.24-.41 4.62-1.14l4.26 4.26a3 3 0 0 0 4.24 0 3 3 0 0 0 0-4.24"></path></svg>
         </div>
         <div class="letra  " >Buscar</div>
       </div>
