--- a/hoy.html
+++ b/hoy.html
@@ -48,7 +48,41 @@
       </div>
     </div>
   </nav>
-  <h1>Bienvenidos a Hoy</h1>
+  <div class="date">
+        <h2>23 de mayo de 2022</h2>
+    </div>
+    <div class="title">
+        <h1>Sigue Inspirándote</h1>
+    </div>
+    <div class="grid_container">
+        <div class="grid_item4" style="background-image: url(https://i.pinimg.com/564x/4a/58/cc/4a58ccc0174d2204aee0d60e0dff58d3.jpg)">Diseños de vanguardia</div>
+        <div class="grid_item4" style="background-image: url(https://i.pinimg.com/564x/d7/72/03/d7720335342d7b2c0bb7d751390ff84f.jpg)"></div>
+        <div class="grid_item4" style="background-image: url(https://i.pinimg.com/564x/0a/a9/0c/0aa90ce3e2e44c899846d231304766c4.jpg)"></div>
+    </div>
+        <div class="title">
+            <h2>22 de mayo de 2022</h2>
+        </div>
+    <div class="grid_container">
+        <div class="grid_item4" style="background-image: url(https://i.pinimg.com/564x/da/c8/1a/dac81a6003f7bf22dd6abdc8d02af17b.jpg)"></div>
+        <div class="grid_item4" style="background-image: url(https://i.pinimg.com/564x/e2/bb/af/e2bbaf1a7761a335fdf166e21074e2a5.jpg)"></div>
+        <div class="grid_item4" style="background-image: url(https://i.pinimg.com/564x/de/9a/bd/de9abd3b76786e5c446e87915d1eefa0.jpg)"></div>
+    </div>
+    <div class="title">
+        <h2>21 de mayo de 2022</h2>
+    </div>
+    <div class="grid_container">
+    <div class="grid_item4" style="background-image: url(https://i.pinimg.com/564x/74/df/ce/74dfce53e2356c5b670349da9d59086c.jpg)"></div>
+    <div class="grid_item4" style="background-image: url(https://i.pinimg.com/564x/9b/d4/db/9bd4dbc56fc7d89a9cedfb700a236d2b.jpg)"></div>
+    <div class="grid_item4" style="background-image: url(https://i.pinimg.com/564x/84/d6/7a/84d67a0c62783ef9ddb8702c66ce57ba.jpg)"></div>
+    </div>
+    <br><br><br><br>
+    <div class="pie">
+            ¡Es todo por hoy!
+    </div>
+    <div class="pie">
+        Vuelve mañana para encontrar más inspiración
+    </div>
+    <br><br><br><br><br>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"   integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
