--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <svg  height="24" width="24" viewBox="0 0 24 24" aria-hidden="true" aria-label="" role="img"><path d="M18 12.5a1.5 1.5 0 1 1 .001-3.001A1.5 1.5 0 0 1 18 12.5m-6 0a1.5 1.5 0 1 1 .001-3.001A1.5 1.5 0 0 1 12 12.5m-6 0a1.5 1.5 0 1 1 .001-3.001A1.5 1.5 0 0 1 6 12.5M12 0C5.925 0 1 4.925 1 11c0 2.653.94 5.086 2.504 6.986L2 24l5.336-3.049A10.93 10.93 0 0 0 12 22c6.075 0 11-4.925 11-11S18.075 0 12 0"></path></svg>
     </div>
     <div class="imagen  general sombreado ">
-      <img src="../Clon-pinterest/img/OIP.jpg"  class="imagen" alt="foto de perfil">
+      <img src="./imagenes/OIP.jpg"  class="imagen" alt="foto de perfil">
     </div>
     <div class="flecha general  ">
       <div class="flecha_dim general sombreado">
@@ -48,42 +48,44 @@
       </div>
     </div>
   </nav>
-  <div class="contenedor_imagenes">
-    <div class="diseño_imagen imagen_grande_6"></div>
-    <div class="diseño_imagen imagen_pequeña_1"></div>
-    <div class="diseño_imagen imagen_mediana_1"></div>
-    <div class="diseño_imagen  imagen_mediana_2"></div>
-    <div class="diseño_imagen imagen_pequeña_2"></div>
-    <div class="diseño_imagen imagen_grande_2"></div>
-    <div class="diseño_imagen imagen_mediana_3"></div>
-    <div class="diseño_imagen imagen_pequeña_3"></div>
-    <div class="diseño_imagen imagen_mediana_4"></div>
-    <div class="diseño_imagen imagen_pequeña_4"></div>
-    <div class="diseño_imagen imagen_mediana_5"></div>
-    <div class="diseño_imagen imagen_grande_3"></div>
-    <div class="diseño_imagen imagen_mediana_6"></div>
-    <div class="diseño_imagen imagen_pequeña_5"></div>
-    <div class="diseño_imagen imagen_grande_4"></div>
-    <div class="diseño_imagen imagen_pequeña_6"></div>
-    <div class="diseño_imagen imagen_grande_5"></div>
-    <div class="diseño_imagen imagen_grande_6"></div>
-    <div class="diseño_imagen imagen_pequeña_1"></div>
-    <div class="diseño_imagen imagen_mediana_1"></div>
-    <div class="diseño_imagen  imagen_mediana_2"></div>
-    <div class="diseño_imagen imagen_pequeña_2"></div>
-    <div class="diseño_imagen imagen_grande_2"></div>
-    <div class="diseño_imagen imagen_mediana_3"></div>
-    <div class="diseño_imagen imagen_pequeña_3"></div>
-    <div class="diseño_imagen imagen_mediana_4"></div>
-    <div class="diseño_imagen imagen_pequeña_4"></div>
-    <div class="diseño_imagen imagen_mediana_5"></div>
-    <div class="diseño_imagen imagen_grande_3"></div>
-    <div class="diseño_imagen imagen_mediana_6"></div>
-    <div class="diseño_imagen imagen_pequeña_5"></div>
-    <div class="diseño_imagen imagen_grande_4"></div>
-    <div class="diseño_imagen imagen_pequeña_6"></div>
-    <div class="diseño_imagen imagen_grande_5"></div>
-</div>
+  <div class="row">
+    <div class="column">
+     <img src="./imagenes/img1.jpg" alt="foto1">
+       <img src="./imagenes/img2.jpg" alt="foto2">
+       <img src="./imagenes/img3.jpg" alt="foto3"> 
+       <img src="./imagenes/img4.jpg" alt="foto4"> 
+      <img src="./imagenes/img5.jpg" alt="foto5"> 
+    </div>    
+ 
+    <div class="column">
+        <img src="./imagenes/img6.jpg" alt="foto6">
+        <img src="./imagenes/img7.jpg" alt="foto7">
+        <img src="./imagenes/img8.jpg" alt="foto8">
+        <img src="./imagenes/img9.jpg" alt="foto9">
+        <img src="./imagenes/img10.jpg" alt="foto10">
+    </div> 
+    <div class="column">
+        <img src="./imagenes/img11.jpg" alt="foto11">
+        <img src="./imagenes/img12.jpg" alt="foto12">
+        <img src="./imagenes/img13.jpg" alt="foto13">
+        <img src="./imagenes/img14.jpg" alt="foto14">
+        <img src="./imagenes/img15.jpg" alt="foto15">
+    </div> 
+    <div class="column">
+        <img src="./imagenes/img16.jpg" alt="foto16">
+        <img src="./imagenes/img17.jpg" alt="foto17">
+        <img src="./imagenes/img18.jpg" alt="foto18">
+        <img src="./imagenes/img19.jpg" alt="foto19">
+        <img src="./imagenes/img20.jpg" alt="foto20">
+    </div>
+    <div class="column">
+        <img src="./imagenes/img1.jpg" alt="foto1">
+        <img src="./imagenes/img2.jpg" alt="foto2">
+        <img src="./imagenes/img3.jpg" alt="foto3">
+        <img src="./imagenes/img4.jpg" alt="foto4">
+        <img src="./imagenes/img5.jpg" alt="foto5">
+    </div>
+</div> 
   
 </body>
 </html>
